syntax = "proto3";

option go_package = "main/internal/microservices/user/proto";

import "google/protobuf/empty.proto";
//    protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I../../image/proto -I../proto -I../../session/proto  user.proto
service MailerService {
  rpc SendToken(Payload) returns (google.protobuf.Empty) {}
  rpc CheckToken(Payload) returns (Payload) {}
}

message Payload {
  string payload = 1;
}
